# gpconfig

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  python-publish.yml
docs/: configurable.md  exceptions.md  gpconfig.md  index.md  manager.md
docs/api/cn/: configurable.md  exceptions.md  index.md  manager.md
docs/api/en/: exceptions.md  gpconfig.md  index.md  manager.md
docs/zh/: exceptions.md  gpconfig.md  index.md  manager.md
review/: code-review.md
src/gpconfig/: __init__.py  config.py  configurable.py  exceptions.py  manager.py
tests/: test_caching.py  test_config.py  test_configurable.py  test_exceptions.py  test_exports.py  test_gpconfig_folder.py  test_integration.py  test_manager_api_safety.py  test_manager_get_config.py  test_manager_init.py  test_manager_make_new_folder.py  test_manager_objects.py  test_manager_path_parsing.py  test_mock_configs.py  test_path_handling.py  test_save_paths.py  test_yaml_loading.py
tests/mock_configs/: app.yaml  database.yaml  global_env.yaml  readonly_config.yaml
tests/mock_configs/cache/: memcached.yaml  redis.yaml
tests/mock_configs/databases/primary/: postgres.yaml
tests/mock_configs/databases/replica/: postgres.yaml
tests/mock_configs/services/api/v1/: config.yaml
tests/mock_configs/services/api/v2/: config.yaml
tests/mock_configs/services/workers/: email.yaml  notification.yaml
